# llm-chat-sandbox

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  DESIGN.md  Dockerfile  README.md  SETUP_SUMMARY.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: .dotclaude-manifest.json  settings.json
.claude/agents/: doc-reviewer.md  pr-reviewer.md
.claude/commands/: create-issue.md  create-pr.md  init-issues.md  resolve-issue.md
.claude/rules/: commit-conventions.md  document-generation-guide.md  label-definitions.md
.claude/skills/basic-design/: SKILL.md
.claude/skills/create-issue/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/detailed-design/: SKILL.md
.claude/skills/development-guide/: SKILL.md
.claude/skills/init-issues/: SKILL.md
alembic/: env.py
alembic/versions/: 20260414_0027_1072e9bf7d5d_add_performance_optimization_indexes.py  20260414_0027_24cda6b169f3_initial_migration_with_all_tables_and_.py  20260415_2200_d8a7e58b8dc2_add_sent_message_id_and_sent_at_to_.py
app/: __init__.py  main.py
app/api/: deps.py  websocket.py
app/core/: __init__.py  database.py  security.py
app/domain/: __init__.py  character.py  diary_generator.py  response_timing.py
app/models/: __init__.py  character.py  conversation.py  diary.py  message.py  scheduled_response.py  user.py
app/repositories/: __init__.py  character_repository.py  conversation_repository.py  diary_repository.py  message_repository.py  scheduled_response_repository.py  user_repository.py
app/scheduler/: __init__.py  jobs.py
app/schemas/: __init__.py  auth.py  character.py  conversation.py  diary.py
app/services/: conversation_service.py  diary_service.py  llm_service.py  notification_service.py
docs/: DOCKER_SETUP.md  basic-design.md  detailed-design.md  development-guide.md  requirements.md
docs/ideas/: memo.md
frontend/: README.md  eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: init-db.sql  seed_initial_character.py  verify_docker_setup.sh  verify_setup.sh
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_characters.py  test_conversations.py  test_diary_api.py  test_diary_generator.py  test_diary_service.py  test_docker_integration.py  test_docker_integration.sh  test_llm_service.py  test_notification_service.py  test_response_timing.py  test_scheduled_response_repository.py  test_scheduler_jobs.py  test_websocket.py
(+61 files in other folders)
