[project]
name = "ai-diary-companion"
version = "0.1.0"
description = "AI Diary Companion - 会話から自動生成される日記サービス"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI フレームワーク
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # データベース (PostgreSQL + SQLAlchemy)
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",

    # Pydantic (バリデーション・設定管理)
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",

    # 認証・セキュリティ
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",

    # LLM連携 (Groq API)
    "groq>=0.11.0",
    "openai>=1.51.0",  # Groq uses OpenAI-compatible SDK

    # スケジューラー (バックグラウンドジョブ)
    "apscheduler>=3.10.0",

    # WebSocket
    "websockets>=13.0",

    # プッシュ通知 (Firebase Cloud Messaging)
    "firebase-admin>=6.5.0",

    # ユーティリティ
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    # リンター・フォーマッター
    "ruff>=0.6.0",

    # 型チェック
    "mypy>=1.11.0",
    "types-python-dateutil>=2.9.0",
    "types-pytz>=2024.1.0",

    # テスト
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # FastAPIテスト用
    "faker>=28.0.0",  # テストデータ生成
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "groq.*",
    "apscheduler.*",
    "firebase_admin.*",
]
ignore_missing_imports = true
